--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<nav class="navbar">
 			<div class="container">
 				<div class="navbar-header">
-					<a href="index.html" class="navbar-brand">
+					<a href="" class="navbar-brand">
 						<img src="img/logo.png" alt="Author">
 					</a>
 					<a href="#navbar-collapse" class="navbar-toggler">
@@ -27,22 +27,22 @@
 				<div class="navbar-collapse" id="navbar-collapse">
 					<ul class="navbar-nav unstyle">
 						<li class="navbar-item">
-							<a href="index.html" class="navbar-link is-active">home</a>
+							<a href="" class="navbar-link is-active">home</a>
 						</li>
 						<li class="navbar-item">
-							<a href="index - about-us.html" class="navbar-link">service</a>
+							<a href="" class="navbar-link">service</a>
 						</li>
 						<li class="navbar-item">
-							<a href="index - pricing.html" class="navbar-link">portfolio</a>
+							<a href="" class="navbar-link">portfolio</a>
 						</li>
 						<li class="navbar-item">
-							<a href="index - contact.html" class="navbar-link">team</a>
+							<a href="#team" class="navbar-link">team</a>
 						</li>
 						<li class="navbar-item">
-							<a href="index - contact.html" class="navbar-link">blog</a>
+							<a href="" class="navbar-link">blog</a>
 						</li>
 						<li class="navbar-item">
-							<a href="index - contact.html" class="navbar-link">contact</a>
+							<a href="#contact" class="navbar-link">contact</a>
 						</li>
 					</ul>
 				</div>
@@ -62,29 +62,105 @@
 		</div>
 	</div>
 
-	<div class="section">
+	<div id="team" class="section team">
 		<div class="container">
 			<div class="section-header">the team</div>
 			<div class="card-holder">
-				<div class="card"></div>
-				<div class="card"></div>
-				<div class="card"></div>
-				<div class="card"></div>
+				<div class="card">
+					<div class="card-img">
+						<img src="img/team-photo.png" alt="">
+					</div>
+					<div class="card-heading">Adrian Thomas</div>
+					<div class="card-description">CEO & Founder</div>
+					<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been </p>
+				</div>
+				<div class="card">
+					<div class="card-img">
+						<img src="img/team-photo.png" alt="">
+					</div>
+					<div class="card-heading">Narate Ketram</div>
+					<div class="card-description">Creative Director</div>
+					<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been </p>
+				</div>
+				<div class="card">
+					<div class="card-img">
+						<img src="img/team-photo.png" alt="">
+					</div>
+					<div class="card-heading">Fernando Comet</div>
+					<div class="card-description">CEO & Founder</div>
+					<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been </p>
+				</div>
+				<div class="card">
+					<div class="card-img">
+						<img src="img/team-photo.png" alt="">
+					</div>
+					<div class="card-heading">Adedayo saheed</div>
+					<div class="card-description">Creative Director</div>
+					<p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been </p>
+				</div>
 			</div>
 		</div>
 	</div>
 	
-	<div class="section background-light">
+	<div class="section plans background-light">
 		<div class="container">
 			<div class="card-holder">
-				<div class="card"></div>
-				<div class="card"></div>
-				<div class="card"></div>
+				<div class="card">
+					<div class="card-header">
+						<div class="card-heading inverse">Basic</div>
+					</div>
+					<div class="card-body">
+						<div class="price" >$5.01/ Month</div>
+						<span>Lorem ipsum</span>
+						<span>Dolor sit amet, consect</span>
+						<span>Adipiscing elit</span>
+						<span>Proin commodo turpis</span>
+						<span>lacus pulvinarvel</span>
+						<span>Prnare nisi pretium.</span>
+					</div>
+					<div class="card-footer">
+						<button class="button">Buy now</button>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-header">
+						<div class="card-heading inverse">Pro</div>
+					</div>
+					<div class="card-body">
+						<div class="price" >$10.01/ Month</div>
+						<span>Lorem ipsum</span>
+						<span>Dolor sit amet, consect</span>
+						<span>Adipiscing elit</span>
+						<span>Proin commodo turpis</span>
+						<span>lacus pulvinarvel</span>
+						<span>Prnare nisi pretium.</span>
+					</div>
+					<div class="card-footer">
+						<button class="button">Buy now</button>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-header">
+						<div class="card-heading inverse">Premium</div>
+					</div>
+					<div class="card-body">
+						<div class="price" >$20.01/ Month</div>
+						<span>Lorem ipsum</span>
+						<span>Dolor sit amet, consect</span>
+						<span>Adipiscing elit</span>
+						<span>Proin commodo turpis</span>
+						<span>lacus pulvinarvel</span>
+						<span>Prnare nisi pretium.</span>
+					</div>
+					<div class="card-footer">
+						<button class="button">Buy now</button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<footer class="section footer inverse">
+	<footer id="contact" class="section footer inverse">
 		<div class="section-overlay background-dark" style="background-image: url(img/bg-footer.png);">
 		</div>
 		<div class="container">
@@ -92,38 +168,41 @@
 			<div class="section-body">
 				<div class="column-left">
 					<div>
-						<div class="heading">Get in touch with us</div>
+						<div class="heading inverse">Get in touch with us</div>
 						<p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's </p>
 					</div>
-					<ul class="unstyle">
-						<li>
+					<ul class="social unstyle">
+						<li class="social-item blue">
 							<a href="">
 								<span class="icon-facebook"></span>
 							</a>
 						</li>
-						<li>
+						<li class="social-item">
 							<a href="">
 								<span class="icon-twitter"></span>
 							</a>
 						</li>
-						<li>
+						<li class="social-item red">
 							<a href="">
 								<span class="icon-google-plus"></span>
 							</a>
 						</li>
 					</ul>
-					<span>Posted by Dospel & GanjaParker</span>
-					<span>+XX-XXXX - XXXX - XX</span>
-					<span>info@mail.com</span>
+					<span class="info">Posted by Dospel & GanjaParker</span>
+					<span class="info">+XX-XXXX - XXXX - XX</span>
+					<span class="info">info@mail.com</span>
 				</div>
-				<div class="column-right">
+				<div class="column-right ">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Name">
-						<input type="text" class="form-control" placeholder="Email">
+						<input type="text" class="form-control f-sm" placeholder="Name">
+						<input type="text" class="form-control f-sm" placeholder="Email">
 						<textarea class="form-control" placeholder="Message"></textarea>
 					</div>
-					<button class="button">send</button>
+					<div class="clearfix">
+						<button class="button btn-inverse">send</button>
+					</div>
 				</div>
+				
 			</div>
 		</div>
 	</footer>
