--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<span>Prnare nisi pretium.</span>
 					</div>
 					<div class="card-footer">
-						<button class="button">Buy now</button>
+						<button class="button btn">Buy now</button>
 					</div>
 				</div>
 				<div class="card">
@@ -165,7 +165,7 @@
 						<span>Prnare nisi pretium.</span>
 					</div>
 					<div class="card-footer">
-						<button class="button">Buy now</button>
+						<button class="button btn">Buy now</button>
 					</div>
 				</div>
 				<div class="card">
@@ -182,7 +182,7 @@
 						<span>Prnare nisi pretium.</span>
 					</div>
 					<div class="card-footer">
-						<button class="button">Buy now</button>
+						<button class="button btn">Buy now</button>
 					</div>
 				</div>
 			</div>
